@@ -103,6 +103,49 @@ module Doric
       @_id_field
     end
 
+    # Creates a by_{key} method.
+    #
+    # If a func (a String) is passed, a {key} method is created that
+    # uses the given view function fragment.
+    #
+    # == example
+    #
+    #   class Task < Rufus::Doric::Model
+    #
+    #     property :user
+    #     property :status
+    #     property :date_terminated
+    #
+    #     view_by :user
+    #
+    #     view_by 'open_tasks', %{
+    #       if (doc.date_terminated) return;
+    #       if (doc.status == 'suspended') return;
+    #       emit(doc.user, null);
+    #     }
+    #   end
+    #
+    # will thus have a by_user method and a open_tasks method
+    #
+    #   Task.by_user('john')
+    #     # lists all the tasks for the user 'john'
+    #
+    #   Task.open_tasks('john')
+    #     # lists all the open tasks for the user 'john'
+    #
+    #   Task.open_tasks('john', :skip => 5, :limit => 10)
+    #     # lists 10 open tasks for the user 'john' (skipping the first 5)
+    #
+    # == options
+    #
+    # The methods generated by view_by support the following options :
+    #
+    #   :limit, :skip, :inclusive_end, :descending, :start[key], :end[key]
+    #
+    # See http://wiki.apache.org/couchdb/HTTP_view_API#Querying_Options
+    #
+    # The all method supports the same options.
+    #
     def self.view_by (key, func=nil)
 
       if func
@@ -110,7 +153,7 @@ module Doric
         k = { key => func }
 
         instance_eval %{
-          def by_#{key} (val, opts={})
+          def #{key} (val, opts={})
             by(#{k.inspect}, val, opts)
           end
         }
@@ -534,18 +577,34 @@ module Doric
       result['rows'].collect { |r| r['doc'] }
     end
 
-    def self.by (key, val, opts)
+    # A helper method for .by
+    #
+    def self.is_option_hash (h)
+
+      return false unless h.is_a?(Hash)
+      h.keys.each { |k| return false unless k.is_a?(Symbol) }
+      true
+    end
+
+    # view_by uses this .by method in the background
+    #
+    def self.by (key, val, opts={})
+
+      #p [ key, val, opts ]
 
       qs = [ 'include_docs=true' ]
 
-      if val.is_a?(Array) && ( ! key.is_a?(Array))
-
-        st, en = val
-        qs << "startkey=#{Rufus::Doric.escape(st)}" if st
-        qs << "endkey=#{Rufus::Doric.escape(en)}" if en
+      if is_option_hash(val)
+        opts = val
       else
-
         qs << "key=#{Rufus::Doric.escape(val)}"
+      end
+
+      if st = opts[:start] || opts[:startkey]
+        qs << "startkey=#{Rufus::Doric.escape(st)}"
+      end
+      if en = opts[:end] || opts[:endkey]
+        qs << "endkey=#{Rufus::Doric.escape(en)}"
       end
 
       add_common_options(qs, opts)
