@@ -4,6 +4,9 @@
 
 == rufus-doric - 0.1.8    not yet released
 
+- view_by 'funcname', 'func' creates a 'funcname' method, not a 'by_funcname'
+- ranges must now be specified with :start[key] and/or :end[key]
+
 
 == rufus-doric - 0.1.7    released 2010/04/16
 
